--- a/MapsTutorial/Base.lproj/Main.storyboard
+++ b/MapsTutorial/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="WFQ-IV-ZgX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="WFQ-IV-ZgX">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -26,12 +26,21 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nHz-la-r6R">
-                                <rect key="frame" x="11" y="94" width="245" height="42"/>
+                                <rect key="frame" x="11" y="94" width="245" height="34"/>
                                 <state key="normal" title="Basic Map - centre, set region">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <segue destination="GZW-d4-aBW" kind="show" id="o6A-Eh-lkB"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="awl-Sl-ZZE">
+                                <rect key="frame" x="11" y="208" width="268" height="30"/>
+                                <state key="normal" title="Zooming the Map">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="jMU-Ai-alY" kind="show" id="aMw-fB-Nv6"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -139,6 +148,59 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kzC-EJ-QpI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="402" y="474"/>
+        </scene>
+        <!--Zoom MapVC-->
+        <scene sceneID="MuB-Gd-iOO">
+            <objects>
+                <viewController id="jMU-Ai-alY" customClass="ZoomMapVC" customModule="MapsTutorial" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="7Qq-uS-KBZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="3uh-JK-lWZ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="D7n-0d-XAP">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="4QG-gR-HTi">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uvK-Jg-Zts">
+                                <rect key="frame" x="307" y="72" width="107" height="52"/>
+                                <state key="normal" title="Zoom In">
+                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="zoomIn:" destination="jMU-Ai-alY" eventType="touchUpInside" id="oE7-kS-InD"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SLi-fS-oyi">
+                                <rect key="frame" x="307" y="132" width="107" height="52"/>
+                                <state key="normal" title="Zoom Out">
+                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="zoomOut:" destination="jMU-Ai-alY" eventType="touchUpInside" id="nmo-PD-Ch6"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="4QG-gR-HTi" firstAttribute="top" secondItem="D7n-0d-XAP" secondAttribute="top" id="fNm-EH-kBE"/>
+                            <constraint firstItem="4QG-gR-HTi" firstAttribute="leading" secondItem="D7n-0d-XAP" secondAttribute="leading" id="fk7-FD-g9S"/>
+                            <constraint firstItem="4QG-gR-HTi" firstAttribute="bottom" secondItem="3uh-JK-lWZ" secondAttribute="top" id="liw-Eh-iGB"/>
+                            <constraint firstAttribute="trailing" secondItem="4QG-gR-HTi" secondAttribute="trailing" id="mCr-yl-4bh"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
+                    <connections>
+                        <outlet property="mapView" destination="4QG-gR-HTi" id="WTb-CX-3pA"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J0B-wk-tF7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="430" y="1365"/>
         </scene>
     </scenes>
 </document>
